generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  ADMIN
  MEMBER
}

enum TaskStatus {
  TODO
  IN_PROGRESS
  REVIEW
  DONE
  ARCHIVED
}

enum Priority {
  P0
  P1
  P2
  P3
}

enum ProjectStatus {
  ACTIVE
  ARCHIVED
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  name      String
  avatar    String?
  role      Role     @default(MEMBER)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  projects ProjectMember[]
  tasks    Task[]
}

model Project {
  id          String        @id @default(uuid())
  name        String
  description String?
  status      ProjectStatus @default(ACTIVE)
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  members ProjectMember[]
  tasks   Task[]
  columns BoardColumn[]
}

model ProjectMember {
  id        String   @id @default(uuid())
  role      Role     @default(MEMBER)
  joinedAt  DateTime @default(now())

  userId    String
  user      User    @relation(fields: [userId], references: [id])
  projectId String
  project   Project @relation(fields: [projectId], references: [id])

  @@unique([userId, projectId])
}

model BoardColumn {
  id        String   @id @default(uuid())
  name      String
  status    TaskStatus
  order     Int      @default(0)
  createdAt DateTime @default(now())

  projectId String
  project   Project @relation(fields: [projectId], references: [id])

  @@unique([projectId, status])
}

model Task {
  id          String     @id @default(uuid())
  title       String
  description String?
  status      TaskStatus @default(TODO)
  priority    Priority   @default(P2)
  dueDate     DateTime?
  order       Int        @default(0)
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt

  projectId   String
  project     Project @relation(fields: [projectId], references: [id])
  assigneeId  String?
  assignee    User?   @relation(fields: [assigneeId], references: [id])

  tags Tag[]
}

model Tag {
  id    String @id @default(uuid())
  name  String
  color String @default("#6366f1")

  tasks Task[]

  @@unique([name])
}
